removed body *::-webkit-scrollbar-button and fixed #megaNav__contents

--- a/styles/japanesewithanime.com/catppuccin.user.css
+++ b/styles/japanesewithanime.com/catppuccin.user.css
@@ -75,12 +75,13 @@
 		color: @text !important;
 		background-color: @base !important;
 	}
-	body *::-webkit-scrollbar-button{
-		color: @text !important;
-		background-color: @base !important;
-		border-width: 0 !important;
-	}
 
+
+
+  #megaNav__contents{
+		color: @text !important;
+		background-color: @surface1 !important;
+	}
 	.featured-posts i,
 	:not(a).transcript-extra{
 		color: @accent-color;
